--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc_driver=com.mysql.cj.jdbc.Driver
-jdbc_url=jdbc:mysql://localhost:3306/book_db?serverTimezone=Hongkong&allowMultiQueries=true&characterEncoding=utf8&useUnicode=true&&characterSetResults=utf8
+jdbc_url=jdbc:mysql://localhost:3306/db_book?serverTimezone=Hongkong&allowMultiQueries=true&characterEncoding=utf8&useUnicode=true&&characterSetResults=utf8
 jdbc_username=root
 jdbc_password=123456
